[FIX] toList()